data/forge_javadoc/1.12.2/processed/net_minecraft_entity_monster_EntityPigZombie.md
# EntityPigZombie

**Inheritance:** java.lang.Object → net.minecraft.entity.Entity → net.minecraft.entity.EntityLivingBase → net.minecraft.entity.EntityLiving → net.minecraft.entity.EntityCreature → net.minecraft.entity.monster.EntityMob → net.minecraft.entity.monster.EntityZombie → net.minecraft.entity.monster.EntityPigZombie

## Class signature

```java
public class EntityPigZombie extends EntityZombie
```

## Methods

- `protected void applyEntityAI()`
- `protected void applyEntityAttributes()`
- `boolean attackEntityFrom(DamageSource source, float amount)`
- `protected SoundEvent getAmbientSound()`
- `boolean getCanSpawnHere()`
- `protected SoundEvent getDeathSound()`
- `protected SoundEvent getHurtSound(DamageSource damageSourceIn)`
- `protected ResourceLocation getLootTable()`
- `protected ItemStack getSkullDrop()`
- `boolean isAngry()`
- `boolean isNotColliding()`
- `boolean isPreventingPlayerRest(EntityPlayer playerIn)`
- `boolean processInteract(EntityPlayer player, EnumHand hand)`
- `void readEntityFromNBT(NBTTagCompound compound)`
- `static void registerFixesPigZombie(DataFixer fixer)`
- `protected void setEquipmentBasedOnDifficulty(DifficultyInstance difficulty)`
- `void setRevengeTarget(EntityLivingBase livingBase)`
- `protected void updateAITasks()`
- `void writeEntityToNBT(NBTTagCompound compound)`

## Fields

- `EntityPigZombie`